--- a/index.html
+++ b/index.html
@@ -4,89 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <div class="page">
       <header class="header">
         <div class="logo logo_place_header"></div>
-        <p class="header__title">Научиться учиться</p>
+        <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-          <a href="#" class="header__link" title="Узнать">Узнать →</a></p>
+          <a href="#" class="header__link" title="Узнать">Узнать &#8594;</a></p>
+        </p>
         <div class="header__main-illustration"></div>
         <div class="header__square-pic"></div>
         </header>
         <main class="content">
             <section class="description">
               <div class="two-columns">
-                <a class="two-columns__brief" href="#">Главные проблемы в обучении</a>
+                <h3 class="two-columns__brief" href="#">Главные проблемы в обучении</h3>
                 <div class="two-columns__main-text">
                   <div class="two-columns__paragraph">
-                    <p class="spaces">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-                    <p class="spaces-add"><span class="two-columns__span-accent">Вывод: </span>Учиться тоже надо уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-                    <p class="spaces">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+                    <p class="two-columns__paragraph two-columns__paragraph_spaces">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+                    <p class="two-columns__paragraph two-columns__paragraph_spaces-add"><span class="two-columns__span-accent">Вывод: </span>Учиться тоже надо уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+                    <p class="two-columns__paragraph two-columns__paragraph_spaces">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
                   </div>
-              </div>
+                </div>
               </div>
             </section>
             <section class="digits">
-              <h1 class="section-title section-title_theme_white">Цифры и факты</h1>
-              <h3 class="section-subtitle">Про учёбу и мозг</h3>
-              <div class="table table_theme_white">
-                <div class="table__cell table__cell_theme_white">
+              <h2 class="section-title">Цифры и факты</h2>
+              <p class="section-subtitle">Про учёбу и мозг</p>
+              <div class="table">
+                <div class="table__cell">
                   <h2 class="table__heading">86 миллиардов</h2>
-                  <p class="table__text">Число нейронов в мозге человека</p>
+                    <p class="table__text">Число нейронов в мозге человека</p>
                 </div>
-                <div class="table__cell table__cell_theme_white">
+                <div class="table__cell">
                   <h2 class="table__heading">2,1 миллиарда</h2>
-                  <p class="table__text">Число нуждающихся в повышении квалификации></p>
-                  <p class="table__text table__text_bank">Всемирный Банк, 2017</p>
+                    <p class="table__text">Число нуждающихся в повышении квалификации></p>
+                    <p class="table__text table__text_bank">Всемирный Банк, 2017</p>
                   </div>
-                <div class="table__cell table__cell_theme_white">
+                <div class="table__cell">
                   <h2 class="table__heading">1000 терабайт</h2>
-                  <p class="table__text">Объём памяти человека</p>
+                    <p class="table__text">Объём памяти человека</p>
                 </div>
-                <div class="table__cell table__cell_theme_white">
+                <div class="table__cell">
                   <h2 class="table__heading">500 триллионов</h2>
-                  <p class="table__text">Число нуждающихся в повышении квалификации</p>
+                    <p class="table__text">Число нуждающихся в повышении квалификации</p>
                 </div>
-                <div class="table__cell table__cell_theme_white">
+                <div class="table__cell">
                   <h2 class="table__heading">420 миллионов</h2>
-                  <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-                  <p class="table__text table__text_bank">Всемирный Банк, 2017</p>
+                    <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+                    <p class="table__text table__text_bank">Всемирный Банк, 2017</p>
                 </div>
-                <div class="table__cell table__cell_theme_white">
+                <div class="table__cell">
                   <h2 class="table__heading">17-20 лет</h2>
-                  <p class="table__text">Пик обучаемости</p>
+                    <p class="table__text">Пик обучаемости</p>
                 </div>
-                <div class="table__cell table__cell_theme_white">
+                <div class="table__cell">
                   <h2 class="table__heading">1885</h2>
-                  <p class="table__text">Открытие кривой забывания</p>
+                    <p class="table__text">Открытие кривой забывания</p>
                 </div>
-                <div class="table__cell table__cell_theme_white">
+                <div class="table__cell">
                   <h2 class="table__heading">1889</h2>
-                  <p class="table__text">Открытие условного рефлекса</p>
+                    <p class="table__text">Открытие условного рефлекса</p>
                 </div>
               </div>
             </section>
             <section class="feinman">
-              <h1 class="feinman__title">Метод Фейнмана</h1>
-              <h3 class="feinman__subtitle">Выучить и не забыть.</h3>
-              <a href="#" class="feinman__link">Подробнее →</a>
+              <h2 class="feinman__title">Метод Фейнмана</h2>
+              <p class="feinman__subtitle">Выучить и не забыть.</p>
+              <a href="#" class="feinman__link">Подробнее &#8594;</a>
             </section>
             <section class="kaufman">
               <div class="kaufman__triangle"></div>
-              <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
-              <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+              <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+              <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
               <div class="table table_theme_dark">
                 <div class="table__cell table__cell_theme_dark">
                   <h2 class="table__heading">1</h2>
-                  <p class="table__text">Выберете какой-то привлекательный проект.</p>
+                    <p class="table__text">Выберете какой-то привлекательный проект.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
                   <h2 class="table__heading">2</h2>
-                  <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+                    <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
                   </div>
                 <div class="table__cell table__cell_theme_dark">
                   <h2 class="table__heading">3</h2>
@@ -94,31 +95,31 @@
                 </div>
                 <div class="table__cell table__cell_theme_dark">
                   <h2 class="table__heading">4</h2>
-                  <p class="table__text">Разберите навык на элементы.</p>
+                    <p class="table__text">Разберите навык на элементы.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
                   <h2 class="table__heading">5</h2>
-                  <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+                    <p class="table__text">Приготовьте всё необходимое для занятий.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
                   <h2 class="table__heading">6</h2>
-                  <p class="table__text">Устраните препятствия для знаний.</p>
+                    <p class="table__text">Устраните препятствия для знаний.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
                   <h2 class="table__heading">7</h2>
-                  <p class="table__text">Выделите специальное время для занятий.</p>
+                    <p class="table__text">Выделите специальное время для занятий.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
                   <h2 class="table__heading">8</h2>
-                  <p class="table__text">Создайте быстрые петли для обратной связи.</p>
+                    <p class="table__text">Создайте быстрые петли для обратной связи.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
                   <h2 class="table__heading">9</h2>
-                  <p class="table__text">Занимайтесь по расписанию короткими интенсивными интервалами.</p>
+                    <p class="table__text">Занимайтесь по расписанию короткими интенсивными интервалами.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
                   <h2 class="table__heading">10</h2>
-                  <p class="table__text">Уделяйте внимание качеству и скорости.</p>
+                    <p class="table__text">Уделяйте внимание качеству и скорости.</p>
                 </div>
               </div>
             </section>
@@ -127,24 +128,24 @@
           <div class="footer__columns">
             <div class="footer__column footer__column_content_copyright">
               <div class="logo logo_place_footer"></div>
-              <div class="footer__author"> 2020. Елизавета</div>
+              <p class="footer__author"> 2020. Елизавета</p>
             </div>
-            <div class="footer__column footer__column_content_info">
-              <div class="footer__column-heading">О Практикуме</div>
+            <nav class="footer__column footer__column_content_info">
+              <h3 class="footer__column-heading">О Практикуме</h3>
               <ul class="footer__column-links">
-                <li>Главная</li>
-                <li>Концепция</li>
-                <li>Наставники</li>
+                <li><a class="footer__column-links" href="#" title="Главная">Главная</a></li>
+                <li><a class="footer__column-links" href="#" title="Концепция">Концепция</a></li>
+                <li><a class="footer__column-links" href="#" title="Наставники">Наставники</a></li>
               </ul>
-            </div>
-            <div class="footer__column footer__column_content_social">
-              <div class="footer__column-heading">Соцсети</div>
-              <ul class="footer__social-icon">
-                <li><a class="footer__social-icon footer__social-icon_facebook" href="https://www.facebook.com" style="color: white" title="Facebook">Facebook</a><li>
-                <li><a class="footer__social-icon footer__social-icon_vk" href="https://vk.com" style="color: white" title="Вконтакте">Вконтакте</a></li>
-                <li><a class="footer__social-icon footer__social-icon_instagram" href="https://www.instagram.com/" style="color: white" title="Instagram">Instagram</a></li>
+            </nav>
+            <nav class="footer__column footer__column_content_social">
+              <h3 class="footer__column-heading">Соцсети</h3>
+              <ul class="footer__column-links">
+                <li><a class="footer__column-links footer__column-links_facebook" href="https://www.facebook.com" title="Facebook">Facebook</a><li>
+                <li><a class="footer__column-links footer__column-links_vk" href="https://vk.com" title="Вконтакте">Вконтакте</a></li>
+                <li><a class="footer__column-links footer__column-links_instagram" href="https://www.instagram.com/" title="Instagram">Instagram</a></li>
               </ul>
-            </div>>
+            </nav>
           </div>
         </footer>
     </div>
