--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main class="content">
             <section class="description">
               <div class="two-columns">
-                <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+                <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
                 <div class="two-columns__main-text">
                     <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
                     <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>Учиться тоже надо уметь, но почему-то этому мало где учат. Что с этим делать?</p>
@@ -62,8 +62,8 @@
               <h3 class="section-title">Видео на TED</h3>
               <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
               <div class="video__iframes">
-                <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
-                <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+                <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+                <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
               </div>
             </section>
             <section class="oakley">
