исправлены пути до картинок

--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
               <p class="section-subtitle">Пять практик от Барбары Оакли</p>
               <div class="cards">
               <div class="cards__item">
-                <img class="cards__image" src="images/attention.png" alt="Обложка книги">
+                <img class="cards__image" src="../how-to-learn/images/attention.png" alt="Обложка книги">
                 <h4 class="cards__title">Два вида внимания</h4>
                 <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
               </div>
               <div class="cards__item">
-                <img class="cards__image" src="images/recall.png" alt="Статуя">
+                <img class="cards__image" src="../how-to-learn/images/recall.png" alt="Статуя">
                 <h4 class="cards__title">Recall</h4>
                 <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозенные порции в памяти.</p>
               </div>
               <div class="cards__item">
-                <img class="cards__image" src="images/interliving.png" alt="Интерливинг">
+                <img class="cards__image" src="../how-to-learn/images/interliving.png" alt="Интерливинг">
                 <h4 class="cards__title">Интерливинг</h4>
                 <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
               </div>
               <div class="cards__item">
-                <img class="cards__image" src="images/question.png" alt="Вопросы">
+                <img class="cards__image" src="../how-to-learn/images/question.png" alt="Вопросы">
                 <h4 class="cards__title">Вопросы</h4>
                 <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
               </div>
               <div class="cards__item">
-                <img class="cards__image" src="images/competence.png" alt="Компетенции">
+                <img class="cards__image" src="../how-to-learn/images/competence.png" alt="Компетенции">
                 <h4 class="cards__title">Иллюзия компетентности</h4>
                 <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
               </div>
@@ -127,7 +127,7 @@
                 <p class="khan__quote-author">Джордж Лукас</p>
                 <p class="khan__quote-author-subline">Кинорежиссёр, продюссер</p>
                 <div class="khan__book-container">
-                  <img class="khan__book-pic" src="images/book.jpg" alt="Книга Весь мир - школа">
+                  <img class="khan__book-pic" src="../how-to-learn/images/book.jpg" alt="Книга Весь мир - школа">
                   <a href="#" class="khan__buy-link" title="Купить книгу">Купить книгу &#8594;</a>
                 </div>
               </div>
@@ -183,10 +183,10 @@
               <h3 class="section-title">Полезные ресурсы</h3>
               <p class="section-subtitle">Больше материала о техниках и лайфхаках обучения.</p>
               <div class="resources__logo-zone">
-                <a class="resources__logo" href="#" title="Arzamas"><img src="images/logo/arzamas.svg" alt="Ссылка на ресурс Арзамас"></a>
-                <a class="resources__logo" href="#" title="N+1"><img src="images/logo/n1.svg" alt="Ссылка на ресурс N+1"></a>
-                <a class="resources__logo" href="#" title="Стелка"><img src="images/logo/strelka.svg" alt="Ссылка на ресурс Стрелка"></a>
-                <a class="resources__logo" href="#" title="Полка"><img src="images/logo/polka.svg" alt="Ссылка на ресурс Полка"></a>
+                <a class="resources__logo" href="#" title="Arzamas"><img src="../how-to-learn/images/logo/arzamas.svg" alt="Ссылка на ресурс Арзамас"></a>
+                <a class="resources__logo" href="#" title="N+1"><img src="../how-to-learn/images/logo/n1.svg" alt="Ссылка на ресурс N+1"></a>
+                <a class="resources__logo" href="#" title="Стелка"><img src="../how-to-learn/images/logo/strelka.svg" alt="Ссылка на ресурс Стрелка"></a>
+                <a class="resources__logo" href="#" title="Полка"><img src="../how-to-learn/images/logo/polka.svg" alt="Ссылка на ресурс Полка"></a>
               </div>
             </section>
         </main>
